--- a/app-about-company.properties
+++ b/app-about-company.properties
@@ -1,11 +1,9 @@
-text.copyright=o7planning.org
-
 # ===============================
 # DATABASE
 # ===============================
 
 db_driver=com.mysql.jdbc.Driver
 
-db_url=jdbc:mysql://localhost:3306/ericssonclaimdb
+db_url=jdbc:mysql://localhost:3306/datamaticsclaimdb
 db_username=root
 db_password=vignesh
