--- a/virtusa-mysql-docker-development.properties
+++ b/virtusa-mysql-docker-development.properties
@@ -1,5 +1,5 @@
   
-db_url=jdbc:mysql://localhost:3306/virtusauscustomerdevdb?useSSL=true
+db_url=jdbc:mysql://mysql:3306/virtusauscustomerdevdb?useSSL=true
 db_username=root
-db_password=vignesh
+db_password=password
 db_driver=com.mysql.cj.jdbc.Driver
